# enum-arena

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md
.github/workflows/: check.yml
arena/: Cargo.toml
arena/src/: basic.rs  internal.rs  lib.rs  traits.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/matchy/: body.rs  builder.rs  err.rs  expand.rs  expr.rs  mod.rs
derive/: Cargo.toml
derive/src/: arena.rs  err.rs  interface.rs  lib.rs  meta.rs  visitor.rs
derive/src/matchy/: builder.rs  meta.rs  mod.rs
interface/: Cargo.toml
interface/src/: algbraic.rs  basic.rs  deref.rs  internal.rs  lib.rs  traits.rs
src/: lib.rs
tests/: data_struct.rs
