[package]
name = "algebraic-enum"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "arena", "core", "derive","interface" ]

[dependencies.interface]
package = "algebraic-enum-interface"
path = "./interface"
version = "0.1.0" 

[dependencies.arena]
package = "algebraic-enum-arena"
path = "./arena"
version = "0.1.0"
optional = true

[dependencies.derive]
package = "algebraic-enum-derive"
path = "./derive"
version = "0.1.0"

[features]
default = []
arena = ["dep:arena", "derive/arena"]

[dev-dependencies]
rusty-hook = "0.11.2"
