[package]
name = "enum-arena"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "interface", "derive" ]

[dependencies.interface]
package = "enum-arena-interface"
path = "./interface"
version = "0.1.0"

[dependencies.derive]
package = "enum-arena-derive"
path = "./derive"
version = "0.1.0"

[dev-dependencies]
rusty-hook = "0.11.2"
