[package]
name = "algebraic-enum-core"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = {version = "2.0.66", features= [ "full", "parsing", "derive", "visit", "visit-mut", "extra-traits" ]}
thiserror = "1.0.61"


[dependencies.interface]
package = "algebraic-enum-interface"
path = "../interface"
version = "0.1.0"
