[package]
name = "algebraic-enum-derive"
version = "0.1.0"
edition = "2021"

[dependencies.core]
package = "algebraic-enum-core"
path = "../core"
version = "0.1.0"

[dependencies.arena]
package = "algebraic-enum-arena"
path = "../arena"
version = "0.1.0"
optional = true

[lib]
proc-macro = true

[features]
default = []
arena = ["dep:arena"]
