[package]
name = "enum-arena-derive"
version = "0.1.0"
edition = "2021"

[dependencies.interface]
package = "enum-arena-interface"
path = "../interface"
version = "0.1.0"

[dependencies.syn]
version = "2.0.68"
features = ["visit", "visit-mut", "extra-traits"]

[dependencies]
thiserror = "1.0.61"
quote = "1.0.36"
proc-macro2 = "1.0.86"
proc-macro-warning = "1.0.2"
lazy_static = "1.5.0"


[lib]
proc-macro = true
